[project]
name = "comfyui-tcd-scheduler"
description = "ComfyUI Custom Sampler nodes that implement Zheng et al.'s Trajectory Consistency Distillation based on [a/https://mhh0318.github.io/tcd](https://mhh0318.github.io/tcd)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/dfl/comfyui-tcd-scheduler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-tcd-scheduler"
Icon = ""
